[fix] spinner overflow.

--- a/client/src/components/common/Spinner/Spinner.scss
+++ b/client/src/components/common/Spinner/Spinner.scss
@@ -16,8 +16,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
   }
 
   &--on-content {
